# obs

./: Cargo.toml  README.md
musicas/: badapple0.txt  badapple_nomico5.txt  badapple_nomico7.txt  badapple_nomico8.txt  badapple_nomico9.txt  badapple_nomico_bass.txt  badapple_nomico_lead.txt  megalovania_bass.txt  megalovania_lead.txt
src/: audio.rs  io.rs  lib.rs  main.rs  synth.rs  utils.rs
src/audio/: channel.rs  drum_machine.rs  synth.rs  voice.rs
src/io/: audio_out.rs  midi_reader.rs  player.rs  wav_reader.rs
src/synth/: channel.rs  sampler.rs  voice.rs
