[package]
name = "obs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.9.0"
num-traits = "0.2"
midly = "0.5.3"
wav = "1.0.0"
rand = "0.8.5"
console = "0.15.8"
termion = "4.0.0"

[[bin]]
name = "main"

[[bin]]
name = "midi_test"